--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
         "ext-SimpleXML": "*",
         "ext-mbstring": "*",
         "ext-libxml": "*",
-        "guzzlehttp/guzzle": "^7.3|^6.5"
+        "guzzlehttp/guzzle": "^7.2"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.2"
